--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,7 +1,90 @@
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
+  left: 0;
+  right: 0;
+  height:100vh;
+}
+.main{
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
 
+}
+.main img{
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  position: absolute;
+}
+.Home{
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  position: absolute;
+  color:#fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.Home h3 ,.Home p{
+  width: fit-content;
+  height: fit-content;
+}
+.Home h3{
+  font-size: 60px;
+  font-family: "Play", sans-serif;
+}
+.Home p{
+  font-size: 20px;
+  font-family: "Noto Sans KR", sans-serif;
+}
+/* From Uiverse.io by Mike11jr */ 
+.btn {
+ padding: 1.1em 2em;
+ background: none;
+ border: 2px solid #fff;
+ font-size: 15px;
+ color: #131313;
+ cursor: pointer;
+ position: relative;
+ overflow: hidden;
+ transition: all 0.3s;
+ border-radius: 12px;
+ background-color: #ecd448;
+ font-weight: bolder;
+ box-shadow: 0 2px 0 2px #000;
+ height: fit-content;
+ margin-top: 30px;
+}
+
+.btn:before {
+ content: "";
+ position: absolute;
+ width: 100px;
+ height: 120%;
+ background-color: #ff6700;
+ top: 50%;
+ transform: skewX(30deg) translate(-150%, -50%);
+ transition: all 0.5s;
+}
+
+.btn:hover {
+ background-color: #4cc9f0;
+ color: #fff;
+ box-shadow: 0 2px 0 2px #0d3b66;
+}
+
+.btn:hover::before {
+ transform: skewX(30deg) translate(150%, -50%);
+ transition-delay: 0.1s;
+}
+
+.btn:active {
+ transform: scale(0.9);
 }
