--- a/app/static/style.css
+++ b/app/static/style.css
@@ -44,128 +44,170 @@
   font-size: 20px;
   font-family: "Noto Sans KR", sans-serif;
 }
-/* From Uiverse.io by Mike11jr */ 
-.btn {
- padding: 1.1em 2em;
- background: none;
- border: 2px solid #fff;
- font-size: 15px;
- color: #131313;
- cursor: pointer;
- position: relative;
- overflow: hidden;
- transition: all 0.3s;
- border-radius: 12px;
- background-color: #ecd448;
- font-weight: bolder;
- box-shadow: 0 2px 0 2px #000;
- height: fit-content;
- margin-top: 30px;
-}
-
-.btn:before {
- content: "";
- position: absolute;
- width: 100px;
- height: 120%;
- background-color: #ff6700;
- top: 50%;
- transform: skewX(30deg) translate(-150%, -50%);
- transition: all 0.5s;
-}
-
-.btn:hover {
- background-color: #4cc9f0;
- color: #fff;
- box-shadow: 0 2px 0 2px #0d3b66;
-}
-
-.btn:hover::before {
- transform: skewX(30deg) translate(150%, -50%);
- transition-delay: 0.1s;
-}
-
-.btn:active {
- transform: scale(0.9);
-}
-.Serveys{
-  width: 100%;
-  height: 100%;
-
-}
 .head{
-  width: 100%;
   height: 10%;
-}
-/* From Uiverse.io by Yaya12085 */ 
-.input-container {
-  position: relative;
+  font-family: "Play", sans-serif;
   display: flex;
-  height: 2.8rem;
-  width: 100%;
-  min-width: 200px;
-  max-width: 250px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 20px 20px 30px rgba(0, 0, 0, .05);
+  align-items: center;
+  margin-left: 20px;
 }
-
-.input-container input {
+.head h1{
+  height: max-content;
+}
+.messageBox {
+  width: fit-content;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #1e1e1e;
+  padding: 0 15px;
+  border-radius: 10px;
+  border: 1px solid rgb(63, 63, 63);
+}
+.messageBox:focus-within {
+  border: 1px solid #606060;
+}
+.fileUploadWrapper {
+  width: fit-content;
   height: 100%;
-  width: 100%;
-  border-radius: 8px;
-  border: 1px solid  rgb(176 190 197);
-  background-color: transparent;
-  padding: 0.625rem 70px 0.625rem 0.75rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  font-weight: 400;
-  color: rgb(69 90 100);
-  outline: none;
-  transition: all .15s cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.input-container input:focus {
-  border: 1px solid rgb(236 72 153 );
+#file {
+  display: none;
 }
-
-.invite-btn {
+.fileUploadWrapper label {
+  cursor: pointer;
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.fileUploadWrapper label svg {
+  height: 18px;
+}
+.fileUploadWrapper label svg path {
+  transition: all 0.3s;
+}
+.fileUploadWrapper label svg circle {
+  transition: all 0.3s;
+}
+.fileUploadWrapper label:hover svg path {
+  stroke: #fff;
+}
+.fileUploadWrapper label:hover svg circle {
+  stroke: #fff;
+  fill: #3c3c3c;
+}
+.fileUploadWrapper label:hover .tooltip {
+  display: block;
+  opacity: 1;
+}
+.tooltip {
   position: absolute;
-  width: 65px;
-  right: 4px;
-  top: 4px;
-  bottom: 4px;
-  z-index: 10;
-  border-radius: 4px;
-  background-color: rgb(236 72 153 );
-  color: #fff;
-  padding-top: .25rem;
-  padding-bottom: .25rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  text-align: center;
-  vertical-align: middle;
-  font-size: 12px;
-  font-weight: 600;
-  text-transform: uppercase;
+  top: -40px;
+  display: none;
+  opacity: 0;
+  color: white;
+  font-size: 10px;
+  text-wrap: nowrap;
+  background-color: #000;
+  padding: 6px 10px;
+  border: 1px solid #3c3c3c;
+  border-radius: 5px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.596);
+  transition: all 0.3s;
+}
+#messageInput {
+  width: 200px;
+  height: 100%;
+  background-color: transparent;
+  outline: none;
   border: none;
-  transition: .6s ease;
+  padding-left: 10px;
+  color: #f5f5f5;
+}
+#messageInput:focus ~ #sendButton svg path,
+#messageInput:valid ~ #sendButton svg path {
+  fill: #3c3c3c;
+  stroke: white;
 }
 
-.invite-btn:hover {
-  right: 2px;
-  top: 2px;
-  bottom: 2px;
-  border-radius: 8px;
+#sendButton {
+  width: fit-content;
+  height: 100%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+#sendButton svg {
+  height: 18px;
+  transition: all 0.3s;
+}
+#sendButton svg path {
+  transition: all 0.3s;
+}
+#sendButton:hover svg path {
+  fill: #3682f4;
+  stroke: white;
 }
 
-.input-container input:placeholder-shown ~ .invite-btn {
-  pointer-events: none;
-  background-color: gray;
-  opacity: 0.5;
-}
 .bar{
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 90%;
+  flex-direction: column;
 }
+.fetching_topics{
+width: 66%;
+  height: fit-content;
+  display: flex;
+  flex-shrink: unset;
+  flex-flow:
+wrap;
+  gap:
+1px;
+}
+
+.topic {
+height: fit-content;
+  width: fit-content;
+  overflow:
+hidden;
+}
+
+.topic input[type="radio"] {
+  display: none;
+}
+
+.topic label {
+  display: inline-block;
+  padding: 10px 20px;
+  cursor: pointer;
+  border: 1px solid #2b426d;
+  background-color: #385c7e;
+  color: white;
+  border-radius: 15px;
+  transition: all ease 0.2s;
+  text-align: center;
+  flex-grow: 1;
+  flex-basis: 0;
+  width: 90px;
+  font-size: 13px;
+  margin: 5px;
+  box-shadow: 0px 0px 50px -15px #000000;
+  height: fit-content;
+}
+
