--- a/app/static/style.css
+++ b/app/static/style.css
@@ -55,7 +55,7 @@
   height: max-content;
 }
 .messageBox {
-  width: fit-content;
+  width: 35%;
   height: 40px;
   display: flex;
   align-items: center;
@@ -125,7 +125,7 @@
   transition: all 0.3s;
 }
 #messageInput {
-  width: 200px;
+  width: 100%;
   height: 100%;
   background-color: transparent;
   outline: none;
@@ -193,12 +193,12 @@ hidden;
 }
 
 .topic label {
-  display: inline-block;
+display: inline-block;
   padding: 10px 20px;
   cursor: pointer;
-  border: 1px solid #2b426d;
-  background-color: #385c7e;
-  color: white;
+  border: 2px solid #fff;
+  background-color: #ecd448;
+  color: #131313;
   border-radius: 15px;
   transition: all ease 0.2s;
   text-align: center;
@@ -207,7 +207,7 @@ hidden;
   width: 90px;
   font-size: 13px;
   margin: 5px;
-  box-shadow: 0px 0px 50px -15px #000000;
   height: fit-content;
+  box-shadow: 0 1px 1px 1px #000;
 }
 
