--- a/app/static/style.css
+++ b/app/static/style.css
@@ -212,4 +212,30 @@ display: flex;
   height: fit-content;
   box-shadow: 0 1px 1px 1px #000;
 }
-
+.result{
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 51px;
+  justify-content: center;
+  height: max-content;
+}
+.card{
+  width: 20%;
+  height: 448px;
+  overflow: hidden;
+  padding: 13px;
+  background: #e3e3e3;
+  border-radius: 10px;
+}
+.card img{
+  width: 100%;
+  height: 90%;
+  border-radius : 10px;
+}
+.card h3{
+  height: fit-content;
+    font-family: "Noto Sans KR", sans-serif;
+    font-size : 13px;
+}
