--- a/app/templates/questions.html
+++ b/app/templates/questions.html
@@ -35,7 +35,7 @@
 <div class="fetching_topics" id="fetching_topics"> 
   
 </div>
-<button onclick='submit()' class='sub'> Button</button>
+<button onclick='submit()' class='sub'> Search</button>
   </div></section>
 <div class="result">
           {% for card in books %}
